--- a/Ecommerce.api/package.json
+++ b/Ecommerce.api/package.json
@@ -2,8 +2,9 @@
   "name": "ecommerce.api",
   "version": "1.0.0",
   "description": "Api feita em nodejs para utilização do App Ecommerce",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Kemuel Gomes",
