--- a/Margherita.Ionic/package.json
+++ b/Margherita.Ionic/package.json
@@ -14,18 +14,20 @@
     "@angular/animations": "5.2.11",
     "@angular/common": "5.2.11",
     "@angular/compiler": "5.2.11",
-    "@angular/compiler-cli": "5.2.11",
+    "@angular/compiler-cli": "^8.2.10",
     "@angular/core": "5.2.11",
     "@angular/forms": "5.2.11",
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@ionic-native/camera": "^5.15.0",
     "@ionic-native/core": "~4.20.0",
     "@ionic-native/network": "^5.14.0",
     "@ionic-native/splash-screen": "~4.20.0",
     "@ionic-native/status-bar": "~4.20.0",
     "@ionic/storage": "2.2.0",
     "cordova-android": "^8.1.0",
+    "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-network-information": "^2.0.2",
     "ionic-angular": "3.9.5",
     "ionicons": "3.0.0",
@@ -54,7 +56,8 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-camera": {}
     },
     "platforms": [
       "android"
