--- a/Margherita.Ionic/package.json
+++ b/Margherita.Ionic/package.json
@@ -23,6 +23,7 @@
     "@ionic-native/camera": "^4.20.0",
     "@ionic-native/core": "~4.20.0",
     "@ionic-native/network": "^4.20.0",
+    "@ionic-native/onesignal": "^5.15.1",
     "@ionic-native/splash-screen": "~4.20.0",
     "@ionic-native/status-bar": "~4.20.0",
     "@ionic/storage": "2.2.0",
@@ -31,6 +32,7 @@
     "cordova-plugin-network-information": "^2.0.2",
     "ionic-angular": "3.9.5",
     "ionicons": "3.0.0",
+    "onesignal-cordova-plugin": "^2.6.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.29"
@@ -57,7 +59,8 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-camera": {}
+      "cordova-plugin-camera": {},
+      "onesignal-cordova-plugin": {}
     },
     "platforms": [
       "android"
